--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -53,4 +53,4 @@ membership_list_flt_grp_name#:#Name
 overview_result_not_authorized#:#Keine Berechtigung
 membership_count_members#:#Mitglieder
 copy#:#Kopieren
-
+overview_test_no_permission#:#(Kein Zugriff)
