--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -53,4 +53,4 @@ membership_list_flt_grp_name#:#Name
 overview_result_not_authorized#:#Not authorized
 membership_count_members#:#Members
 copy#:#Copy
-
+overview_test_no_permission#:#(No Permission)
