Added test selection explorer and changed selection workflow
git-svn-id: https://scm.office.databay.de/scm/svn/testoverview/trunk@6 ab7ac820-3192-4eb8-a634-ab353cc4a3f6

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -54,3 +54,4 @@ overview_result_not_authorized#:#Keine Berechtigung
 membership_count_members#:#Mitglieder
 copy#:#Kopieren
 overview_test_no_permission#:#(Kein Zugriff)
+add_tsts_to_overview#:#Tests hinzufügen
