--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -54,3 +54,4 @@ overview_result_not_authorized#:#Not authorized
 membership_count_members#:#Members
 copy#:#Copy
 overview_test_no_permission#:#(No Permission)
+add_tsts_to_overview#:#Add Tests to Overview
