--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -1,5 +1,6 @@
 <!-- language file start -->
 obj_xtov#:#Testübersicht
+testOverview#:#Test Übersicht
 objs_xtov#:#Testübersicht-Objekte
 obj_xtov_duplicate#:#Testübersicht kopieren
 objs_xtov_duplicate#:#Testübersicht-Objekte kopieren
@@ -19,6 +20,9 @@ content#:#Inhalt
 properties#:#Einstellungen
 edit_properties#:#Einstellungen Bearbeiten
 title#:#Titel
+TestOverview#:#TestOverview
+ExerciseOverview#:#ExerciseOverview
+ex_overview#:#Aufgaben Übersicht
 description#:#Beschreibung
 save#:#Speichern
 cancel#:#Abbrechen
@@ -26,7 +30,7 @@ edit#:#Bearbeiten
 config_test_overview#:#Testübersicht Einstellen
 test_overview_table_title#:#Testübersicht '%s'
 test_list_table_title#:#Zu akkumulierende Tests für die Testübersicht '%s'
-test_list_description#:#Wählen Sie aus, welche Tests in der Inhaltsansicht dieses Objekts akkumuliert werden sollen. Es stehen nur jene Tests zur Verfügung, bei denen Sie das Recht besitzen, die Teststatistiken einzusehen. 
+test_list_description#:#Wählen Sie aus, welche Tests in der Inhaltsansicht dieses Objekts akkumuliert werden sollen. Es stehen nur jene Tests zur Verfügung, bei denen Sie das Recht besitzen, die Teststatistiken einzusehen.
 test_list_hdr_test_title#:#Titel
 test_list_hdr_test_info#:#Pfad zum Test
 add_to_overview#:#Für Übersicht auswählen
@@ -47,11 +51,56 @@ test_overview_description#:#Diese Tabelle zeigt Teilnehmerergebnisse von vorgege
 overview_test_not_passed#:#Nicht teilgenommen
 overview_avg_not_available#:#Nicht verfügbar
 overview_flt_participant_name#:#Teilnehmer
+overview_flt_participant_gender#:#Gender
 overview_flt_group_name#:#Mitgliedschaft
 test_list_flt_tst_name#:#Name
 membership_list_flt_grp_name#:#Name
 overview_result_not_authorized#:#Keine Berechtigung
 membership_count_members#:#Mitglieder
 copy#:#Kopieren
+ranking#:#Ranking
 overview_test_no_permission#:#(Kein Zugriff)
 add_tsts_to_overview#:#Tests hinzufügen
+pie_chart#:#Kuchendiagramm
+bar_chart#:#Säulendiagramm
+test_overview#:#TestOverview
+diagram#:#Diagramm
+test_administration#:#Testverwaltung
+exercise_overview#:#ExerciseOverview
+exercise_administration#:#Aufgabenverwaltung
+Export#:#Export
+reduced#:#Reduziertes Format
+extended#:#Erweitertes Format
+reduced_exp#:#Ergebnisse von allen Tests und Exercises die mit dem TestOverview Objekt assoziiert sind exportieren
+extended_exp#:#Ergebnisse von allen Tests und Exercises die mit dem TestOverview Objekt assoziiert sind, inkl. derer Teilfragen und Assignments exportieren
+name#:#Name
+mat#:#Matrikelnummer
+group#:#Gruppe
+mail#:#Email Adresse
+gend#:#Geschlecht
+qteil#:#Frage 
+assign#:#Übungseinheit 
+make_diagram#:#Erstelle mein Diagramm
+max_diagram_value#:#Bitte geben Sie hier die Granularität(Schrittgröße) des Diagrammes ein 
+userResults#:#Ihre Leistung
+order_ranking#:#Ordnen nach Ranking
+orderName#:#Ordnen nach Namen
+exercise_list_gui#:#Zu akkumulierende Exercises für die Exerciseübersicht '%s'
+exercise_list_hdr_exercise_info#:#Pfad zur Exercise
+exercise_list_description#:#Wählen Sie aus, welche Exercises in der Inhaltsansicht dieses Objekts akkumuliert werden sollen
+min_one_check_exercise#:#Bitte wählen Sie mindestens eine Exercise.
+exc_add#:#Exercise hinzufügen
+exercises_updated_success#:#Die Einstellungen wurden erfolgreich aktualisiert.
+avg_points#:#Durchschnittliche Punktzahl
+total_mark#:#Gesamt Note/Punkte
+average_mark#:#Durchschnittliche Note
+update_rank#:#Aktualisiere Ranking
+success_update#:#Aktualisierung erfolgreich
+bucketFail#:# Die gewählte Körnung(Granularität) ist zu klein. Die Unterteilung wurde in 100 Segmente festgelegt
+nmbr#:#Nummer
+points#:#Punkte
+out_of#:#in Ihrer Gruppe von
+notAvaiable#:#Nicht Berechenbar
+failureMessage#:#Ein oder mehrere Ergebnisse enthalten Buchstaben oder Sonderzeichen
+lastupdate#:#Letztes Update
+delete_rank#:# Ranking zurücksetzten
