--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -1,6 +1,7 @@
 <!-- language file start -->
 obj_xtov#:#Test Overview
 objs_xtov#:#Test Overview
+testOverview#:#Test Overview
 obj_xtov_duplicate#:#Copy
 objs_xtov_duplicate#:#Copy Test Overviews
 xtov_add#:#Add Test Overview
@@ -16,17 +17,22 @@ fold_create_xtov#:#Create Test Overview
 root_create_xtov#:#Create Test Overview
 cat_create_xtov#:#Create Test Overview
 content#:#Content
+ranking#:#Ranking
 properties#:#Settings
 edit_properties#:#Edit Settings
+TestOverview#:#TestOverview
+ExerciseOverview#:#ExerciseOverview
+ex_overview#:#Exercise Overview
 title#:#Title
 description#:#Description
 save#:#Save
 cancel#:#Cancel
+pie_chart#:#Pie Chart
 edit#:#Edit
 config_test_overview#:#Configure Test Overview
 test_overview_table_title#:#Test Overview '%s'
 test_list_table_title#:#Tests to accumulate in overview '%s'
-test_list_description#:#Please select the tests you want to add to this overview. 
+test_list_description#:#Please select the tests you want to add to this overview.
 test_list_hdr_test_title#:#Title
 test_list_hdr_test_info#:#Path to Test
 add_to_overview#:#Add to Overview
@@ -47,6 +53,7 @@ test_overview_description#:#This table shows test results of participants, filte
 overview_test_not_passed#:#Not passed
 overview_avg_not_available#:#Not available
 overview_flt_participant_name#:#Participant
+overview_flt_participant_gender#:#Gender
 overview_flt_group_name#:#Membership
 test_list_flt_tst_name#:#Name
 membership_list_flt_grp_name#:#Name
@@ -55,3 +62,45 @@ membership_count_members#:#Members
 copy#:#Copy
 overview_test_no_permission#:#(No Permission)
 add_tsts_to_overview#:#Add Tests to Overview
+bar_chart#:#Bar Chart
+test_overview#:#TestOverview
+diagram#:#Diagram
+test_administration#:#Test Administration
+exercise_overview#:#ExerciseOverview
+exercise_administration#:#Exercise Administration
+Export#:#Export
+reduced#:#Reduced Format
+extended#:#Extended Format
+reduced_exp#:#Export the results for all tests and exercises linked to the TestOverview Object
+extended_exp#:#Export the results for all questions for every test and for all assignments for all exercises linked to the TestOverview Object
+name#:#Name
+mat#:#Matriculation
+group#:#Group
+mail#:#Mail Address
+gend#:#Gender
+qteil#:#Question 
+assign#:#Assignment
+make_diagram#:#Make my Diagramm
+max_diagram_value#:#Please enter the granularity of your diagram
+userResults#:#Your Results
+order_ranking#:#Order by rank
+orderName#:#Order by name
+exercise_list_gui#:#Exercises to accumulate in overview '%s'
+exercise_list_hdr_exercise_info#:#Path to exercise
+exercise_list_description#:#Please select the exercises you want to add to this overview.
+min_one_check_exercise#:#Please select at least one exercise
+exc_add#:#Add Exercise
+exercises_updated_success#:#Updated successfully.
+avg_points#:#Average Points
+total_mark#:#Total Mark
+average_mark#:#Average Mark
+update_rank#:#Update ranking
+success_update#:#Update sucessfull
+bucketFail#:#The chosen granularity is to small. The buckt size is set to 100.
+nmbr#:#Number
+points#:#Points 
+out_of#:#in your Group out of
+notAvaiable#:#Not Calculable
+failureMessage#:#One or more results contain (special) characters 
+lastupdate#:#Last Update
+delete_rank#:#Reset Ranking
